<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Person register</string>
    <string name="action_settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="imgdesc">Desc</string>

    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="overview">Overview</string>
    <string name="addContact">Register contact</string>



    <string name="firstname">First name:</string>
    <string name="lastname">Last name:</string>
    <string name="phone">Phone:</string>
    <string name="custom">Message:</string>
    <string name="date">Born:</string>

    <string name="language">Choose your language</string>
    <string name="sms">SMS-service</string>
    <string name="service">Service on/off</string>
    <string name="languageHead">Language</string>
    <string name="serviceOnOff">Send birthday message</string>
    <string name="smsDefault">Happy birthday! I hope this is the beginning
        of your greatest most wonderful year ever :) \nRegards Me</string>
    <string name="sendtSms">SMS sent</string>
    <string name="sendtSmsTo">Your app just sent a birthday message!</string>

    <string name="setMessage">Birthday message</string>
    <string name="yourMessage">Your message</string>
    <string name="customize">Customize your message</string>

    <string name="setTime">Service time</string>
    <string name="timeTitle">Time for sms-service</string>
    <string name="set">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="customService">Customize service</string>

    <string name="editService">Edit\nService</string>
    <string name="editService2">Edit Service</string>


</resources>
