<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/sms">

        <CheckBoxPreference
            android:key="checkbox_preference_sms"
            android:defaultValue="true"
            android:title="@string/serviceOnOff"
            android:summary="@string/service" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/setMessage">
        <EditTextPreference
            android:key="PREF_EDITTEXT_MESSAGE"
            android:title="@string/yourMessage"
            android:summary="@string/customize"
            android:dialogTitle="@string/setMessage" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/languageHead">
        <ListPreference android:title="@string/language"
            android:key="language"
            android:entries="@array/language"
            android:entryValues="@array/langVal" />
    </PreferenceCategory>
</PreferenceScreen>