<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstname"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editFirstname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="5dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editLastname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="5dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="5dp"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editMessage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/date"
                android:textSize="20sp" />


            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_height="fill_parent"
                android:layout_above="@+id/createBtnLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="0dp"
                android:calendarViewShown="false"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/createBtnLayout"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addPersonBtn"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_styled"
                android:text="@string/save"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/deletePersonBtn"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_styled"
                android:text="@string/delete"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>